--- a/1/styles.css
+++ b/1/styles.css
@@ -67,6 +67,14 @@ h1 {
     display: block;
 }
 
+.big-img {
+  width: 600px;
+  height: 600px;
+  border: 2px solid black;
+  background-image: url('assets/CROPPED_Colorized_emir.tif.jpg');
+  background-size: cover;
+  background-position: center;
+}
 .caption {
     padding: 10px;
     font-size: 16px;
